...
                                        _idIsIsAvailableChecker.add(str);
                                      },
                                      maxLength: 20,
                                      validator: validateUsername,
                                      decoration: buildInputDecoration(
                                        _i18n.get(
                                          "username",
                                        ),
                                        hintText: "alice_bob",
                                      ),
                                    ),
                                  ),
                                ],
...
                        ),
                        TextFormField(
                          minLines: 1,
                          controller: _descriptionTextController,
                          textInputAction: TextInputAction.send,
                          decoration: InputDecoration(
                            labelText: _i18n.get("description"),
                          ),
                        ),
                      ],
                    ),
                  ),
                  const SizedBox(height: 8),
                  Align(
                    alignment: Alignment.centerRight,
                    child: ElevatedButton(
                      onPressed: checkAndSend,
                      child: Text(_i18n.get("save")),
                    ),
                  )
                ],
              ),
            )
          ],
...
    final checkUserName = _usernameFormKey.currentState?.validate() ?? false;
    if (checkUserName) {
      final isValidated = _formKey.currentState?.validate() ?? false;
      if (isValidated) {
        var setPrivateInfo = await _accountRepo.setAccountDetails(
          username: _usernameTextController.text,
          firstname: _firstnameTextController.text,
          lastname: _lastnameTextController.text,
          description: _descriptionTextController.text,
        );
        if (_emailTextController.text.isNotEmpty &&
            _emailTextController.text != _account.email) {
          try {
            final res =
...
