...
                  ),
                ),
                const SizedBox(
                  width: 30,
                ),
                TextButton(
                  key: const Key("dismiss"),
                  onPressed: () => FeatureDiscovery.dismissAll(context),
                  child: Text(
                    _i18n.get("dismiss"),
                    style: TextStyle(color: theme.colorScheme.onTertiaryContainer,),
                  ),
                ),
...
