...
                  return Text(i18n.get("add_member"));
                }
              },):
            Text(
              isChannel
                  ? i18n.get("newChannel")
                  : i18n.get("newGroup"),
              style: TextStyle(fontSize: 18,color: ExtraTheme.of(context).textField, fontWeight: FontWeight.bold),
            ),

            StreamBuilder<int>(
                stream: _createMucService.selectedLengthStream(),
                builder: (context, snapshot) {
...
